show cropped scales correctly in preview column

--- a/src/plone/app/imagecropping/browser/static/cropping.css
+++ b/src/plone/app/imagecropping/browser/static/cropping.css
@@ -13,5 +13,8 @@
 }
 .thumbPreview {
     overflow:hidden;
-    max-height:10em;
+}
+.thumbPreview img {
+    max-width:100%;
+    height:auto;
 }
